--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "acorn": "^5.7.1",
-    "acorn-globals": "^4.1.0"
+    "acorn": "^5.7.1"
+  },
+  "devDependencies": {
+    "power-assert": "^1.6.0"
   }
 }
